--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@ body {
     background-attachment: fixed;
     background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
 }
 .container {
     display: block;
