--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@ body {
     overflow-x: hidden;
     background: url("../sources/mainBG.jpg");
     background-attachment: fixed;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
