--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 @import url("./reset.css");
 body {
     width: 100%;
+    height: 100vh;
     overflow-x: hidden;
     background: url("../sources/mainBG.jpg");
     background-size: cover;
